@@ -1,6 +1,6 @@
 /*
  * OpenRemote, the Home of the Digital Home.
- * Copyright 2008-2012, OpenRemote Inc.
+ * Copyright 2008-2013, OpenRemote Inc.
  *
  * See the contributors.txt file in the distribution for a
  * full listing of individual contributors.
@@ -32,7 +32,10 @@ import org.openremote.controller.protocol.EventListener;
 import org.openremote.controller.command.ExecutableCommand;
 
 /**
-  * Lagarto listener class. Designed to receive event-driven information
+ * Lagarto listener class. Designed to receive event-driven information
+ *
+ * @author Daniel Berenguer
+ * @author <a href="mailto:juha@openremote.org">Juha Lindfors</a> 
  */
 public class LagartoCommand implements ExecutableCommand, EventListener
 {
@@ -126,6 +129,13 @@ public class LagartoCommand implements ExecutableCommand, EventListener
   */
   private String httpRequest() throws LagartoException
   {
+    if (lagartoClient == null)
+    {
+      logger.debug("Ignoring send. Lagarto client not yet initialized.");
+
+      return null;
+    }
+    
     LagartoNetwork network = lagartoClient.getNetwork(networkName);
 
     if (network == null)
